# Q31st-assigment

./: README.md  pyproject.toml  ran.py
todos/: main.py
todos/config/: db.py
todos/models/: todos.py
